# cutie-phone-daemon

./: .gitignore  CMakeLists.txt  README.md
debian/: control  cutie-phone-daemon.cutie-phone-daemon.service  rules
src/: main.cpp  phone.cpp  phone.h
